--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="about" class="about">
       <div class="container text-center">
         <h2>Hi!</h2>
-        <p class="lead">I am a passionate Economics and Mathematics student from the London School of Economics that studied Machine Learning at UC Berkeley. I want to pursue a career at the intersection between Machine Learning and Econometrics and complete a PhD. in Economics. Have a look at some of the projects I have been involved with.
+        <p class="lead">I am a passionate Economics (Econometrics and Mathematical Economics) student from the London School of Economics. My current interests lie at the intersection of Econometrics and Machine Learning, subject that I studied at UC Berkeley. In the future I would like to complete a PhD. in Economics. Have a look at some of the projects I have been involved with.
         <!--  <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p> -->
       </div>
       <!-- /.container -->
