--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <header class="header" id="top">
       <div class="text-vertical-center">
         <h1> <font color="white"> Jaume Vives </font></h1>
-        <h3> <font color="white"> Economics and Mathematics Student </font></h3>
+        <h3> <font color="white"> Econometrics and Mathematical Economics Student </font></h3>
         <br>
         <!--<a href="https://www.linkedin.com/in/jaume-vives-596586bb?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BqSW5GLYyQRO8lknMzyBU%2FQ%3D%3D" class="btn btn-light btn-lg"> Linkedin</a> -->
         <a href="#about" class="btn btn-light btn-lg js-scroll-trigger">About</a>
