--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1> <font color="white"> Jaume Vives </font></h1>
-        <h3> <font color="white"> Econometrics and Mathematical Economics Student </font></h3>
+        <h1> <font color="white"> Jaume Vives i Bastida </font></h1>
+        <h3> <font color="white"> Economics and Statistics at MIT </font></h3>
         <br>
         <!--<a href="https://www.linkedin.com/in/jaume-vives-596586bb?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BqSW5GLYyQRO8lknMzyBU%2FQ%3D%3D" class="btn btn-light btn-lg"> Linkedin</a> -->
         <a href="#about" class="btn btn-light btn-lg js-scroll-trigger">About</a>
-        <a href="https://drive.google.com/file/d/0B_Y_l2arIrHsRjZfVW1sTF8tNWs/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
+        <a href="https://drive.google.com/file/d/1kY2D-WvXGIgft-nQVlI2BLalaP4dJZYy/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
         <h3></h3>
         <span class="fa-stack fa-3x">
           <a href="https://github.com/jvivesb">
@@ -79,8 +79,8 @@
     <!-- About -->
     <section id="about" class="about">
       <div class="container text-center">
-        <h2>Hi!</h2>
-        <p class="lead">I am a passionate Economics (Econometrics and Mathematical Economics) student from the London School of Economics. My current interests lie at the intersection of Econometrics and Machine Learning, subject that I studied at UC Berkeley. In the future I would like to complete a PhD. in Economics. Have a look at some of the projects I have been involved with.
+        <h2>About Me</h2>
+        <p class="lead">I am a PhD candidate in Economics and Statistics at MIT. I study topics at the intersection of Econometrics and Statistical Learning and I am interested in applications to market design, applied microeconomics and IO. Previously, I studied at LSE and UC Berkeley and worked as a research assistant at the University of Chicago Booth. Besides academia, I have experience in various data science positions at Quantco, Google and in finance.
         <!--  <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p> -->
       </div>
       <!-- /.container -->
@@ -204,7 +204,7 @@
     </aside>
     -->
     <!-- Portfolio -->
-  
+  <!--
     <section id="portfolio" class="portfolio">
       <div class="container">
         <div class="row">
@@ -240,13 +240,14 @@
                   </a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!--<a href="#" class="btn btn-dark">View More Items</a>-->
+  <!--
           </div>
         </div>
       </div>
     </section>
-
+  -->
     <!-- Call to Action -->
     <!--
     <aside class="call-to-action bg-primary text-white">
