--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <div id="services">
     <div class="container">
       <div class="services-block">
-        <a href="https://drive.google.com/file/d/1XBL4r2byYPa6lxMF0Xe-ygecXxjJjw2g/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
+        <a href="https://drive.google.com/file/d/1t4nWRCsUqD7zdjZgk8oyLOdLqQ1GZIHh/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
 
       </div>
     </div>
@@ -140,7 +140,7 @@
           <div class="col-lg-4 ">
             <div class="div-img-bg">
               <div class="about-img">
-                <img src="images/elastic.jpg" alt="paper" width="525" height="450">
+                <img src="images/elastic.jpg" class="img-responsive" alt="paper" width="525" height="450">
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
         </div>
 
         <div class="col-md-5">
-          <img src="images/independence.jpg" alt="paper" style="border: 0.5px solid #5555" width="425" height="300">
+          <img src="images/independence.jpg" class="img-responsive" alt="paper" style="border: 0.5px solid #5555" width="425" height="300">
         </div>
       </div>
      
