--- a/index.html
+++ b/index.html
@@ -137,14 +137,11 @@
         <div class="col-lg-6">
           <h6>Stretching the Net: Multidimensional Regularization", second resubmission at Econometric Theory</h6>
           <p></p>
-          <div class="col-lg-3 ">
-            <div class="div-img-bg">
-              <div class="about-img">
+              <div class="col-lg-20 col-md-12 portfolio-thumbnail all branding uikits webdesign">
                 <img src="images/elastic.jpg" class="img-responsive" alt="paper" width="525" height="450">
               </div>
-            </div>
-          </div>
         </div>
+
 
         <div class="col-lg-5">
           <div class="about-descr">
@@ -194,10 +191,9 @@
             </li> 
           </ul>
         </div>
-
-        <div class="col-md-4">
-          <img src="images/independence.jpg" class="img-responsive" alt="paper" style="border: 0.5px solid #5555" width="425" height="300">
-        </div>
+        <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
+                <img src="images/independence.jpg" class="img-responsive" alt="img">
+            </div>
       </div>
      
 
