--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </ul>
         </div>
         <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
-                <img src="images/independence.jpg" class="img-responsive" alt="img">
+                <img src="images/independence.jpg" class="img-responsive" alt="img" style="border: 0.5px solid #5555">
             </div>
       </div>
      
