added new article

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
 
         <div class="col-lg-6">
           <ul class="w3-ul w3-border">
+            <li >"Más test y más colaboración público-privada contra la Covid-19", La Vanguardia, Sep 2020.
+            <a href="https://www.lavanguardia.com/local/barcelona/20200928/483636033309/test-colaboracion-publico-privada-covid19-barcelona-global.html">link</a>
+            </li> 
             <li >"La incertesa s’apodera d’un milió d’estudiants per si Trump retira els visats", Ara, July 2020.
             <a href="https://www.ara.cat/internacional/permisos-residencia-estudiants-estats-units-trump-coronavirus-covid-19_0_2489151069.html">link</a>
             </li> 
