added slides and new cv

--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
             <p class="separator">I study topics at the intersection of Econometrics and Statistical Learning and I am interested in applications to market design, applied microeconomics and IO. </p>
 
             <p class="separator">Previously, I studied at LSE and UC Berkeley and worked as a research assistant at the University of Chicago Booth. Besides academia, I have experience in various data science positions at Quantco, Google and in finance. </p>
-
           </div>
 
         </div>
@@ -124,8 +123,7 @@
   <div id="services">
     <div class="container">
       <div class="services-block">
-        <a href="https://drive.google.com/file/d/1JebDaMlYkVFyna8yLbRO19yY9Mnb7hWG/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
-
+        <a href="https://drive.google.com/file/d/11lfRp6JzRLoyZfZo_qlK7kSNlIcXoQh2/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
       </div>
     </div>
 
@@ -145,7 +143,7 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-6">
-          <h6>Stretching the Net: Multidimensional Regularization", second resubmission at Econometric Theory</h6>
+          <h6>Stretching the Net: Multidimensional Regularization", accepted at Econometric Theory</h6>
           <p></p>
               <div class="col-lg-20 col-md-12 portfolio-thumbnail all branding uikits webdesign">
                 <img src="images/elastic.jpg" class="img-responsive" alt="paper" width="525" height="450">
@@ -156,14 +154,12 @@
         <div class="col-lg-5">
           <div class="about-descr">
             <p class="separator" style = "text-align: left">In the paper I derive asymptotic risk (expected loss) results for shrinkage estimators with multidimensional regularization in high-dimensional settings. </p>
-
-            <p class="separator" style = "text-align: left">I introduce the MuSE (multidimensional shrinkage estimator) class, which includes the elastic net, extending the analysis of Abadie and Kasy 2018. </p>
-
             <p class="separator" style = "text-align: left">I show that as the number of parameters to estimate grows the empirical loss converges to the oracle-optimal risk. </p>
-
-            <p class="separator" style = "text-align: left">To help guide applied researchers in their choice of estimator I compare the empirical Bayes risk of the lasso, ridge and elastic net in a spike and normal setting. See the figure for the lasso vs. elastic net comparison for different sparsity settings.</p>
+            <p class="p-heading">New Research!</p>
+            <p class="separator" style = "text-align: left"> "Variable selection for synthetic controls."  
+            <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">slides</a> </p>
+            <p class="separator" style = "text-align: left"> I introduce a new penalized synthetic control method for policy evaluation. The proposed sparse synthetic control penalizes the number of predictors used in generating the counterfactual to improve pre-treatment fit and select the most important predictors. </p>
           </div>
-
         </div>
       </div>
     </div>
