--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div id="services">
     <div class="container">
       <div class="services-block">
-        <a href="https://drive.google.com/file/d/11lfRp6JzRLoyZfZo_qlK7kSNlIcXoQh2/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
+        <a href="https://drive.google.com/file/d/1jD86ifIxobin2vscrS-uxNa_KpwWZ_dH/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
       </div>
     </div>
 
@@ -143,7 +143,8 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-6">
-          <h6>Stretching the Net: Multidimensional Regularization", accepted at Econometric Theory</h6>
+          <h6>"Stretching the Net: Multidimensional Regularization", accepted at Econometric Theory</h6>
+          <a href="https://www.doi.org/10.1017/S0266466621000347">(Paper)</a> </p>
           <p></p>
               <div class="col-lg-20 col-md-12 portfolio-thumbnail all branding uikits webdesign">
                 <img src="images/elastic.jpg" class="img-responsive" alt="paper" width="525" height="450">
