Added current research projects

--- a/index.html
+++ b/index.html
@@ -105,11 +105,18 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">PhD in Economics and Statistics at MIT.  </p>
+            <p class="p-heading">Current Research Projects</p>
             
-            <p class="separator">I study topics at the intersection of Econometrics and Statistical Learning and I am interested in applications to market design, applied microeconomics and IO. </p>
+            <p class="separator">Synthetic Controls in Action (with Alberto Abadie)
+              <a href="https://economics.mit.edu/files/21900"> (Link)</a>
+            </p>
 
-            <p class="separator">Previously, I studied at LSE and UC Berkeley and worked as a research assistant at the University of Chicago Booth. Besides academia, I have experience in various data science positions at Quantco, Google and in finance. </p>
+            <p class="separator">Simple Bayesian Synthetic Controls (with Ignacio Martinez)
+              <a href="https://github.com/google/bsynth"> (R-Package)</a>
+            </p>
+            <p class="separator">Variable Selection for Synthetic Controls
+              <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">(slides)</a> 
+            </p>
           </div>
 
         </div>
@@ -158,7 +165,8 @@
             <p class="separator" style = "text-align: left">I show that as the number of parameters to estimate grows the empirical loss converges to the oracle-optimal risk. </p>
             <p class="p-heading">New Research!</p>
             <p class="separator" style = "text-align: left"> "Variable selection for synthetic controls."  
-            <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">slides</a> </p>
+              <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">slides</a> 
+            </p>
             <p class="separator" style = "text-align: left"> I introduce a new penalized synthetic control method for policy evaluation. The proposed sparse synthetic control penalizes the number of predictors used in generating the counterfactual to improve pre-treatment fit and select the most important predictors. </p>
           </div>
         </div>
