added link to website and google scholar

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
           <li><a href="https://github.com/jvivesb"><i class="ion-social-github"></i></a></li>
           <li><a href="https://twitter.com/jaumevivesb?lang=en"><i class="ion-social-twitter"></i></a></li>
         </ul>
+        <ul class="list-unstyled list-social">
+          <li><a href="https://economics.mit.edu/grad/vives"> MIT website </a></li>
+          <li><a href="https://scholar.google.com/citations?user=Md6Cm7IAAAAJ&hl=en">Google Scholar</a></li>
+        </ul>
       </div>
     </div>
   </div>
