added link to ET paper

--- a/index.html
+++ b/index.html
@@ -115,14 +115,17 @@
               <a href="https://economics.mit.edu/files/21900"> (Link)</a>
             </p>
 
-            <p class="separator">Simple Bayesian Synthetic Controls (with Ignacio Martinez)
+            <p class="separator">Bayesian Synthetic Controls (with Ignacio Martinez)
               <a href="https://github.com/google/bsynth"> (R-Package)</a>
             </p>
             <p class="separator">Variable Selection for Synthetic Controls
               <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">(slides)</a> 
             </p>
+            <p class="p-heading">Published Work</p>
+            <p class="separator">
+              <a href="https://economics.mit.edu/files/22435"> Stretching the Net: Multidimensional Regularization </a>
+            (Econometric Theory, 2021) </p>
           </div>
-
         </div>
       </div>
     </div>
@@ -154,8 +157,8 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-6">
-          <h6>"Stretching the Net: Multidimensional Regularization", accepted at Econometric Theory</h6>
-          <a href="https://www.doi.org/10.1017/S0266466621000347">(Paper)</a> </p>
+          <h6>"Stretching the Net: Multidimensional Regularization", forthcoming at Econometric Theory</h6>
+          <a href="https://economics.mit.edu/files/22435">(Paper)</a> </p>
           <p></p>
               <div class="col-lg-20 col-md-12 portfolio-thumbnail all branding uikits webdesign">
                 <img src="images/elastic.jpg" class="img-responsive" alt="paper" width="525" height="450">
