added arxiv and new LV article

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <p class="separator">Bayesian Synthetic Controls (with Ignacio Martinez)
               <a href="https://github.com/google/bsynth"> (R-Package)</a>
             </p>
-            <p class="separator">Variable Selection for Synthetic Controls
-              <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">(slides)</a> 
+            <p class="separator">Sparse Synthetic Controls: Variable Selection for Synthetic Controls
+              <a href="https://arxiv.org/abs/2203.11576">(arxiv)</a> 
             </p>
             <p class="p-heading">Published Work</p>
             <p class="separator">
@@ -172,7 +172,7 @@
             <p class="separator" style = "text-align: left">I show that as the number of parameters to estimate grows the empirical loss converges to the oracle-optimal risk. </p>
             <p class="p-heading">New Research!</p>
             <p class="separator" style = "text-align: left"> "Variable selection for synthetic controls."  
-              <a href="https://drive.google.com/file/d/1g4DEZ2mqQUY1ODfUy3dxBaPEgqGhqOt2/view?usp=sharing">slides</a> 
+              <a href="https://arxiv.org/abs/2203.11576">arxiv</a> 
             </p>
             <p class="separator" style = "text-align: left"> I introduce a new penalized synthetic control method for policy evaluation. The proposed sparse synthetic control penalizes the number of predictors used in generating the counterfactual to improve pre-treatment fit and select the most important predictors. </p>
           </div>
@@ -193,9 +193,11 @@
 
     <div class="container">
       <div class="row justify-content-between">
-
         <div class="col-lg-6">
           <ul class="w3-ul w3-border">
+          	<li >"¿Cómo diseñar políticas públicas desde el rigor académico?", La Vanguardia, Jan 2022.
+            <a href="https://www.lavanguardia.com/local/barcelona/20220131/8016091/como-disenar-politicas-publicas-rigor-academico.html">link</a>
+            </li> 
             <li >"Más test y más colaboración público-privada contra la Covid-19", La Vanguardia, Sep 2020.
             <a href="https://www.lavanguardia.com/local/barcelona/20200928/483636033309/test-colaboracion-publico-privada-covid19-barcelona-global.html">link</a>
             </li> 
