--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             </p>
 
             <p class="separator">Bayesian Synthetic Controls (with Ignacio Martinez)
+              <a href="https://economics.mit.edu/files/23068"> (Link)</a>
               <a href="https://github.com/google/bsynth"> (R-Package)</a>
             </p>
             <p class="separator">Sparse Synthetic Controls: Variable Selection for Synthetic Controls
