new mit website changed links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <li><a href="https://twitter.com/jaumevivesb?lang=en"><i class="ion-social-twitter"></i></a></li>
         </ul>
         <ul class="list-unstyled list-social">
-          <li><a href="https://economics.mit.edu/grad/vives"> MIT website </a></li>
+          <li><a href="https://economics.mit.edu/people/phd-students/jaume-vives-i-bastida"> MIT website </a></li>
           <li><a href="https://scholar.google.com/citations?user=Md6Cm7IAAAAJ&hl=en">Google Scholar</a></li>
         </ul>
       </div>
@@ -112,11 +112,11 @@
             <p class="p-heading">Current Research Projects</p>
             
             <p class="separator">Synthetic Controls in Action (with Alberto Abadie)
-              <a href="https://economics.mit.edu/files/21900"> (Link)</a>
+              <a href="https://arxiv.org/abs/2203.06279"> (Link)</a>
             </p>
 
-            <p class="separator">Bayesian Synthetic Controls (with Ignacio Martinez)
-              <a href="https://economics.mit.edu/files/23068"> (Link)</a>
+            <p class="separator">Bayesian and Frequentist Inference for Synthetic Controls (with Ignacio Martinez)
+              <a href="https://arxiv.org/abs/2206.01779"> (Link)</a>
               <a href="https://github.com/google/bsynth"> (R-Package)</a>
             </p>
             <p class="separator">Sparse Synthetic Controls: Variable Selection for Synthetic Controls
@@ -124,7 +124,7 @@
             </p>
             <p class="p-heading">Published Work</p>
             <p class="separator">
-              <a href="https://economics.mit.edu/files/22435"> Stretching the Net: Multidimensional Regularization </a>
+              <a href="https://www.cambridge.org/core/journals/econometric-theory/article/stretching-the-net-multidimensional-regularization/66D6A002A234F384663E19FF26E1E1CA"> Stretching the Net: Multidimensional Regularization </a>
             (Econometric Theory, 2021) </p>
           </div>
         </div>
@@ -138,7 +138,7 @@
   <div id="services">
     <div class="container">
       <div class="services-block">
-        <a href="https://drive.google.com/file/d/1TV22ig72DB_U3cSM0xoodbdCBaYt_K9D/view?usp=sharing" class="btn btn-light btn-lg"> Curriculum</a>
+        <a href="https://economics.mit.edu/sites/default/files/2022-10/VIVES_CV_updated_0.pdf" class="btn btn-light btn-lg"> Curriculum</a>
       </div>
     </div>
 
