--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <ul class="list-unstyled list-social">
           <li><a href="https://economics.mit.edu/people/phd-students/jaume-vives-i-bastida"> MIT website </a></li>
           <li><a href="https://scholar.google.com/citations?user=Md6Cm7IAAAAJ&hl=en">Google Scholar</a></li>
+          <li><a href="https://economics.mit.edu/sites/default/files/2023-01/CV_Vives_Bastida_1_0.pdf"> CV </a></li>
         </ul>
       </div>
     </div>
@@ -119,8 +120,11 @@
               <a href="https://arxiv.org/abs/2206.01779"> (Link)</a>
               <a href="https://github.com/google/bsynth"> (R-Package)</a>
             </p>
-            <p class="separator">Sparse Synthetic Controls: Variable Selection for Synthetic Controls
-              <a href="https://arxiv.org/abs/2203.11576">(arxiv)</a> 
+            <p class="separator">Predictor Selection for Synthetic Controls
+              <a href="https://arxiv.org/pdf/2203.11576.pdf">(arxiv)</a> 
+            </p>
+            <p class="separator">Bagged Polynomial Regression and Neural Networks (with Sylvia Klosin)
+              <a href="https://arxiv.org/abs/2205.08609">(arxiv)</a> 
             </p>
             <p class="p-heading">Published Work</p>
             <p class="separator">
@@ -138,7 +142,7 @@
   <div id="services">
     <div class="container">
       <div class="services-block">
-        <a href="https://economics.mit.edu/sites/default/files/2022-10/VIVES_CV_updated_0.pdf" class="btn btn-light btn-lg"> Curriculum</a>
+        <a href="https://economics.mit.edu/sites/default/files/2023-01/CV_Vives_Bastida_1_0.pdf" class="btn btn-light btn-lg"> Curriculum</a>
       </div>
     </div>
 
@@ -172,10 +176,14 @@
             <p class="separator" style = "text-align: left">In the paper I derive asymptotic risk (expected loss) results for shrinkage estimators with multidimensional regularization in high-dimensional settings. </p>
             <p class="separator" style = "text-align: left">I show that as the number of parameters to estimate grows the empirical loss converges to the oracle-optimal risk. </p>
             <p class="p-heading">New Research!</p>
-            <p class="separator" style = "text-align: left"> "Variable selection for synthetic controls."  
+            <p class="separator" style = "text-align: left"> "Predictor selection for synthetic controls."  
               <a href="https://arxiv.org/abs/2203.11576">arxiv</a> 
             </p>
-            <p class="separator" style = "text-align: left"> I introduce a new penalized synthetic control method for policy evaluation. The proposed sparse synthetic control penalizes the number of predictors used in generating the counterfactual to improve pre-treatment fit and select the most important predictors. </p>
+            <p class="separator" style = "text-align: left"> This paper
+proposes the use of a sparse synthetic control procedure that penalizes the number of predictors
+used in generating the counterfactual to select the most important predictors. We derive, in
+a linear factor model framework, a new model selection consistency result and show that the
+penalized procedure has a faster mean squared error convergence rate. </p>
           </div>
         </div>
       </div>
