--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
           <li><a href="https://scholar.google.com/citations?user=Md6Cm7IAAAAJ&hl=en">Google Scholar</a></li>
           <li><a href="https://economics.mit.edu/sites/default/files/2023-01/CV_Vives_Bastida_1_0.pdf"> CV </a></li>
         </ul>
+        <ul class="separator">
+           <li><a href="https://economics.mit.edu/sites/default/files/inline-files/_synthetic_iv.pdf"> NEW: Synthetic instruments in DiD designs with unmeasured confounding (with Ahmet Gulek)</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -114,6 +117,10 @@
             
             <p class="separator">Synthetic Controls in Action (with Alberto Abadie)
               <a href="https://arxiv.org/abs/2203.06279"> (Link)</a>
+            </p>
+            
+            <p class="separator">Synthetic instruments in DiD designs with unmeasured confounding (with Ahmet Gulek)
+              <a href="https://economics.mit.edu/sites/default/files/inline-files/_synthetic_iv.pdf"> (Link)</a>
             </p>
 
             <p class="separator">Bayesian and Frequentist Inference for Synthetic Controls (with Ignacio Martinez)
