--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ the impact of Chinese imports on US manufacturing employment.</small>
 </div> 
 <div class="row">
     <ul>
-      <i>Assessment: Universal Basic Income Pilot Project, Recommendations for an Evaluable Design</i>, with with Mireia Borrell-Porta, Júlia de Quintana, Gianmarco León-Ciliotta and Xavier Ramos<br />
+      <i>Assessment: Universal Basic Income Pilot Project, Recommendations for an Evaluable Design</i>, with Mireia Borrell-Porta, Júlia de Quintana, Gianmarco León-Ciliotta and Xavier Ramos<br />
       Media: <a href="https://www.ara.cat/opinio/renda-basica-universal-perque-mireia-borrell-ivalua_129_4645091.html"> Diari Ara</a>, <a href="https://www.lavanguardia.com/encatala/20230124/8704488/renda-basica-universal-l-aire.html">La Vanguardia</a> <br>
       <b>Ivalua Policy Report</b> (2022) <br>
 <a href="https://ivalua.cat/sites/default/files/2023-03/Assessment_%20design_UBI_Iva%CC%80lua_final_ANG.pdf">[report]</a>
