--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@ the impact of Chinese imports on US manufacturing employment.</small>
   <div class="row" id="Teaching">
     <h5> Teaching </h5>
     <ul>
-        Econometrics for Managers: Correlation & Causality in a Big Data World (MBA) - MIT Sloan 15.034.<br/>
-        Teaching Assistant, for Professor Roberto Rigobon and Professor Joseph Doyle. Spring 2023.  <br/>
+        <b>Econometrics for Managers: Correlation & Causality in a Big Data World </b> (MBA) - MIT Sloan 15.034.<br/>
+        Teaching Assistant for Professor Roberto Rigobon and Professor Joseph Doyle. Spring 2023.  <br/>
         Overall rating 6.8/7.0
 
     </ul>
     <ul>
-        Non-linear Econometrics (Graduate) - MIT 14.385. <br/> 
+        <b>Non-linear Econometrics</b> (Graduate) - MIT 14.385. <br/> 
         Teaching Assistant for Professor Whitney Newey and Professor Max Kasy. Fall 2022. <br/>
         Overall rating 6.7/7.0
     </ul>
