--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h5> Working Papers </h5>
   <div class="row">
     <ul>
-      <i>Synthetic Instruments in DiD Designs with Unmeasured Confounding</i> <br />
+      <i>Synthetic Instruments in DiD Designs with Unmeasured Confounding</i>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> <br />
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
           Presentations: AEA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024),  EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
       <details>
