--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <ul>
       <i>Synthetic Instruments in DiD Designs with Unmeasured Confounding</i>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> <br />
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
-          Presentations: AEA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024),  EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
+          Presentations: AEA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024), BSE Summer Forum Micro-econometrics (2024), EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
       <details>
     <summary>Abstract</summary>
     <small>  Unmeasured confounding and selection into treatment are key threats to reliable causal inference in Difference-in-Differences (DiD) designs. In practice, researchers often use instrumental variables to address endogeneity concerns, for
