--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   				<a href="https://github.com/jvivesb"><i class="fa fa-github fa-1x" style="color:#303030"></i></a> &nbsp;
           <a href="https://scholar.google.com/citations?user=Md6Cm7IAAAAJ&hl=en"><span class="fab icon-scholar fa-2x" style="font-size: 1.6rem"></span></a> &nbsp;
           <a href="https://www.linkedin.com/in/jaume-vives-596586bb/"><i class="fa fa-linkedin fa-1x"></i></a><br>
-          <a href="https://economics.mit.edu/sites/default/files/2023-10/vives-i-bastida_CV.pdf">CV</i></a> 
+          <a href="https://economics.mit.edu/sites/default/files/2024-08/vives-bastida_cv.pdf">Resume</a> <i> - </i><a href="https://economics.mit.edu/sites/default/files/2024-08/ResumeJaumeVives24.pdf">Academic CV</a> 
         </p>
   	  </div>
 	</div>
