--- a/index.html
+++ b/index.html
@@ -110,23 +110,26 @@
       <h5> Working Papers </h5>
   <div class="row">
     <ul>
-      <i>Synthetic Instruments in DiD Designs with Unmeasured Confounding</i>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> <br />
+      <i>Synthetic Instruments in DiD Designs with Unmeasured Confounding</i>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
+          <i>Job Market Paper</i>
+          <br />
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
           Presentations: AEA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024), BSE Summer Forum Micro-econometrics (2024), EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
       <details>
     <summary>Abstract</summary>
-    <small>  Unmeasured confounding and selection into treatment are key threats to reliable causal inference in Difference-in-Differences (DiD) designs. In practice, researchers often use instrumental variables to address endogeneity concerns, for
-example through shift-share instruments. However, in many settings instruments
-may be correlated with unobserved confounders, exhibiting pre-trends. In this
-paper we explore the use of synthetic controls to address unmeasured confounding in IV-DiD settings. We propose a synthetic IV estimator that partials out
-the unmeasured confounding and derive conditions under which it is consistent
-and asymptotically normal, when the standard two-stage least squares is not.
-Motivated by the finite sample properties of our estimator we then propose an
-ensemble estimator that might address different sources of bias simultaneously.
-We illustrate our method through a simulation exercise and two shift-share empirical applications: the Syrian refugee crisis effect on Turkish labor markets and
-the impact of Chinese imports on US manufacturing employment.</small>
+    <small>  We propose a Synthetic Instrumental Variables (SIV) estimator for panel data
+that combines the strengths of instrumental variables and synthetic controls to
+address unmeasured confounding. We derive conditions under which SIV is consistent and asymptotically normal, even when the standard IV estimator is not.
+Motivated by the finite sample properties of our estimator, we introduce an ensemble estimator that simultaneously addresses multiple sources of bias and provide a permutation-based inference procedure. We demonstrate the effectiveness
+of our methods through a calibrated simulation exercise, two shift-share empirical
+applications, and an application in digital economics that includes both observational data and data from a randomized control trial. In our primary empirical
+application, we examine the impact of the Syrian refugee crisis on Turkish labor
+markets. Here, the SIV estimator reveals significant effects that the standard
+IV does not capture. Similarly, in our digital economics application, the SIV
+estimator successfully recovers the experimental estimates, whereas the standard
+IV does not.</small>
 </details>
-        <a href="https://economics.mit.edu/sites/default/files/inline-files/draft_siv.pdf">[Preliminary draft]</a>
+        <a href="https://economics.mit.edu/sites/default/files/inline-files/draft_siv_3.pdf">[Preliminary draft]</a>
     </ul>
 </div> 
   <div class="row">
