added photo and jmp draft

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <div class="one-half column">
        <div class="six columns"> 
           <!-- Use the six columns class to resize the image -->
-          <img class="u-full-width" src="images/foto_mit.jpeg" />
+          <img class="u-full-width" src="images/jaume_vives_cropped.png" />
        </div>
      </div>
     <div class="one-half column" style="margin-top: 5%; font-size: 1.7rem">
@@ -94,24 +94,10 @@
 	</div>
   <hr>
 	<div class="row" id="Research">
-		<h5> Publications </h5>
-
-    <ul>
-      <i>Stretching the Net: Multidimensional Regularization</i> (2023)<br />
-      <b>Econometric Theory</b><br>
-        <a href="https://www.cambridge.org/core/journals/econometric-theory/article/stretching-the-net-multidimensional-regularization/66D6A002A234F384663E19FF26E1E1CA">[Published Version]</a>
-    </ul>
-    <ul>
-        <i> Synthetic Controls in Action </i>, with <a href= "https://economics.mit.edu/people/faculty/alberto-abadie">Alberto Abadie</a><br/>
-        <b>Econometric Society Monographs</b> (forthcoming)<br>
-				<a href="https://arxiv.org/abs/2203.06279">[arXiv]</a>
-		</ul>
-  </div>
-      <h5> Working Papers </h5>
+  <h5>Job Market Paper</h5>
   <div class="row">
     <ul>
-      <b>[Job Market Paper]</b> <br>
-      <i>Synthetic IV estimation in panels</i>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
+      <b>Synthetic IV estimation in panels</b>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
           
           <br />
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
@@ -130,9 +116,25 @@ IV does not capture. Similarly, in our digital economics application, the SIV
 estimator successfully recovers the experimental estimates, whereas the standard
 IV does not.</small>
 </details>
-        <a href="https://economics.mit.edu/sites/default/files/inline-files/draft_siv_3.pdf">[Preliminary draft]</a>
+        <a href="jmp/draft_siv.pdf">[Draft]</a>
     </ul>
 </div> 
+<hr>
+		<h5> Publications </h5>
+
+    <ul>
+      <i>Stretching the Net: Multidimensional Regularization</i> (2023)<br />
+      <b>Econometric Theory</b><br>
+        <a href="https://www.cambridge.org/core/journals/econometric-theory/article/stretching-the-net-multidimensional-regularization/66D6A002A234F384663E19FF26E1E1CA">[Published Version]</a>
+    </ul>
+    <ul>
+        <i> Synthetic Controls in Action </i>, with <a href= "https://economics.mit.edu/people/faculty/alberto-abadie">Alberto Abadie</a><br/>
+        <b>Econometric Society Monographs</b> (forthcoming)<br>
+				<a href="https://arxiv.org/abs/2203.06279">[arXiv]</a>
+		</ul>
+  </div>
+  <hr>
+      <h5> Working Papers </h5>
   <div class="row">
     <ul>
       <i>Predictor Selection for Synthetic Controls</i> <br />
