added teaching evals

--- a/index.html
+++ b/index.html
@@ -196,12 +196,16 @@ IV does not.</small>
         <b>Econometrics for Managers: Correlation & Causality in a Big Data World </b> (MBA) - MIT Sloan 15.034.<br/>
         Teaching Assistant for Professor Roberto Rigobon and Professor Joseph Doyle. Spring 2023.  <br/>
         Overall rating 6.8/7.0
-
+        <br>
+        Selected quote: "Excellent TA. Really appreciated his lecture notes, which were the highlight of the course for me and many of my classmates"
+        <br>
+        <a href="misc/ta_report_15_034.pdf"> [report] </a>  
     </ul>
     <ul>
         <b>Non-linear Econometrics</b> (Graduate) - MIT 14.385. <br/> 
         Teaching Assistant for Professor Whitney Newey and Professor Max Kasy. Fall 2022. <br/>
-        Overall rating 6.7/7.0
+        Overall rating 6.7/7.0 <br>
+        <a href="misc/ta_report_14_385.pdf"> [report] </a>  
     </ul>
 
   <hr>
