--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@ IV does not.</small>
         Selected quote: "Excellent TA. Really appreciated his lecture notes, which were the highlight of the course for me and many of my classmates"
         <br>
         <a href="misc/ta_report_15_034.pdf"> [report] </a>  
+        <br>
+        <a href="misc/Supplementary_Notes.pdf"> [lecture notes] </a>
     </ul>
     <ul>
         <b>Non-linear Econometrics</b> (Graduate) - MIT 14.385. <br/> 
