added rec sys paper:

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
   <h5>Job Market Paper</h5>
   <div class="row">
     <ul>
-      <b>Synthetic IV estimation in panels</b>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
+      <b>Synthetic IV Estimation in Panels</b>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
           
-          <br />
+          <br/>
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
-          Presentations: AEA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024), BSE Summer Forum Micro-econometrics (2024), EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
+          Presentations: ASSA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024), BSE Summer Forum Micro-econometrics (2024), EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
       <details>
     <summary>Abstract</summary>
     <small>  We propose a Synthetic Instrumental Variables (SIV) estimator for panel data
@@ -187,6 +187,19 @@ IV does not.</small>
     <ul>
       <i>Pushing Back Against Private Practice: the Spanish Physician Public Exclusivity Bonus</i>, with <a href="https://economics.mit.edu/people/faculty/jonathan-gruber">Jon Gruber</a>, <a href="https://www.iese.edu/faculty-research/faculty/nuria-mas/">Nuria Mas</a> and <a href="https://www.juditvall.com/">Judit Vall</a> <br />
       New draft coming soon! 
+</div> 
+
+<br>
+<b> Prelinimary work </b>
+</br>
+<div class="row">
+    <ul>
+      <i>Recommendation Systems and Product Diversity in Online Platforms</i>, with Chinmay Lohani <br />
+      <details>
+    <summary>Abstract</summary>
+    <small> Recommendation systems play a key role in shaping consumer welfare and market concentration on digital platforms. Better recommendations lead to better matches and lower search costs for consumers, but can also increase the market power of producers and the ability of the platform to extract surplus. In this paper, we consider a related, and less studied, consequence of improving recommendation systems: the effect on product variety. We develop a simple model of a two-sided platform with consumer and producer matches mediated by a recommendation system of varying quality. We show that as the quality of the recommendation system improves it becomes optimal, in equilibrium, for producers to offer products close to the average consumer. As a consequence, product diversity decreases, market concentration increases and consumer welfare becomes more unequal, with central consumers better off, but tail consumers worse off. Using the universe of  songs from a large music content platform, we provide evidence for the main prediction of the model; with the improvement of recommendations, we see a decrease in music content diversity and a strong correlation between popularity and centrality in the content space. </small>
+</details>
+<a href="misc/Recommendation_Systems_slides.pdf">[short slides]</a>
 </div> 
     
   <hr>
