--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ IV does not.</small>
     <small>  Synthetic control methods often rely on matching pre-treatment characteristics (called predictors) of the treated unit. The choice of predictors and how they are weighted plays a key role in the performance and interpretability of synthetic control estimators. This paper proposes the use of a sparse synthetic control procedure that penalizes the number of predictors used in generating the counterfactual to select the most important predictors. We derive, in a linear factor model framework, a new model selection consistency result and show that the penalized procedure has a faster mean squared error convergence rate. Through a simulation study, we then show that the sparse synthetic control achieves lower bias and has better post-treatment performance than the un-penalized synthetic control. Finally, we apply the method to revisit the study of the passage of Proposition 99 in California in an augmented setting with a large number of predictors available.</small>
 </details>
         <a href="https://arxiv.org/abs/2203.11576">[arXiv]</a>
+        <a href="misc/Predictor_Selection_for_SC.pdf">[slides]</a> <i style="color: darkgreen;">(with a deforestation application)</i>
     </ul>
 </div> 
   <div class="row">
