--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           
           <br/>
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
+          Special Mention (runner up) for the <a href="https://www.eeassoc.org/news/econ-job-market-best-paper-award"> Best Job Market Paper Award</a> (EEA and Unicredit)<br>
           Presentations: ASSA (2025), EEA-ESEM (2024), IAAE (by co-author, 2024), NASM Econometric Society (2024), BSE Summer Forum Micro-econometrics (2024), EWM Econometric Society (2023), American Causal Inference Conference (oral, 2023)<br>
       <details>
     <summary>Abstract</summary>
