--- a/index.html
+++ b/index.html
@@ -88,16 +88,30 @@
   
 	<div class="row" style="margin-top:5%; font-size: 1.7rem">
 		<p>
-    I'm a Ph.D. candidate in Economics and Statistics at <a href="https://economics.mit.edu/">MIT</a> on the 2024-2025 job market. My primary research fields are econometrics and industrial organization with a particular interest in synthetic control methods and recommendation systems in two-sided platforms. During the PhD I have been a <a href="https://research.facebook.com/fellows/bastida-jaume-vives-i/">Meta Research PhD Fellow</a> and a <a href="https://becarios.fundacionlacaixa.org/en/jaume-vives-bastida-B005044">La Caixa fellow</a>. Previously, I obtained a BSc. in Econometrics and Mathematical Economics from the LSE (First Class Honours) and worked as a research professional at the University of Chicago Booth School of Business. I also have experience designing causal inference methods at Google, Quantco, and as a consultant for Ivalua (Catalan Government).  
+    I'm a Ph.D. candidate in Economics and Statistics at <a href="https://economics.mit.edu/">MIT</a>. My primary research fields are econometrics and industrial organization with a particular interest in synthetic control methods and recommendation systems in two-sided platforms. During the PhD I have been a <a href="https://research.facebook.com/fellows/bastida-jaume-vives-i/">Meta Research PhD Fellow</a> and a <a href="https://becarios.fundacionlacaixa.org/en/jaume-vives-bastida-B005044">La Caixa fellow</a>. Previously, I obtained a BSc. in Econometrics and Mathematical Economics from the LSE (First Class Honours) and worked as a research professional at the University of Chicago Booth School of Business. I also have experience designing causal inference methods at Google, Quantco, and as a consultant for Ivalua (Catalan Government). Starting in September 2025, I will be a Postdoc at Stanford GSB and the Stanford Causal Science Center, and from September 2026, I will join NYU as an Assistant Professor of Economics and Data Science.
     </p>
 		</p>
 	</div>
-  <hr>
 	<div class="row" id="Research">
-  <h5>Job Market Paper</h5>
-  <div class="row">
+<hr>
+		<h5> Publications </h5>
+
     <ul>
-      <b>Synthetic IV Estimation in Panels</b>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
+      <i>Stretching the Net: Multidimensional Regularization</i> (2023)<br />
+      <b>Econometric Theory</b><br>
+        <a href="https://www.cambridge.org/core/journals/econometric-theory/article/stretching-the-net-multidimensional-regularization/66D6A002A234F384663E19FF26E1E1CA">[Published Version]</a>
+    </ul>
+    <ul>
+        <i> Synthetic Controls in Action </i>, with <a href= "https://economics.mit.edu/people/faculty/alberto-abadie">Alberto Abadie</a><br/>
+        <b>Econometric Society Monographs</b> (forthcoming)<br>
+				<a href="https://arxiv.org/abs/2203.06279">[arXiv]</a>
+		</ul>
+  </div>
+  <hr>
+      <h5> Working Papers </h5>
+    <div class="row">
+    <ul>
+      <i>Synthetic IV Estimation in Panels</i>, with <a href="https://economics.mit.edu/people/phd-students/ahmet-gulek">Ahmet Gulek</a> 
           
           <br/>
           Co-winner of the <a href="https://cyprusconferences.org/portfolio/iaae-2024/">Best Student Paper Award</a> of the International Association for Applied Econometrics (Thessaloniki, 2024) <br>
@@ -120,22 +134,6 @@ IV does not.</small>
         <a href="jmp/draft_siv.pdf">[Draft]</a>
     </ul>
 </div> 
-<hr>
-		<h5> Publications </h5>
-
-    <ul>
-      <i>Stretching the Net: Multidimensional Regularization</i> (2023)<br />
-      <b>Econometric Theory</b><br>
-        <a href="https://www.cambridge.org/core/journals/econometric-theory/article/stretching-the-net-multidimensional-regularization/66D6A002A234F384663E19FF26E1E1CA">[Published Version]</a>
-    </ul>
-    <ul>
-        <i> Synthetic Controls in Action </i>, with <a href= "https://economics.mit.edu/people/faculty/alberto-abadie">Alberto Abadie</a><br/>
-        <b>Econometric Society Monographs</b> (forthcoming)<br>
-				<a href="https://arxiv.org/abs/2203.06279">[arXiv]</a>
-		</ul>
-  </div>
-  <hr>
-      <h5> Working Papers </h5>
   <div class="row">
     <ul>
       <i>Predictor Selection for Synthetic Controls</i> <br />
